@@ -1,3 +1,12 @@
+2001-08-01  Jeff Freedman  <jeff@amy.nerble.net>
+
+	* gumps/Sign_gump.cc (Sign_gump): Scroll in SI.
+
+	* objs/objs.cc: In SI, don't 'find_nearby()' teleport eggs.  Fixes
+	wine cask bug.  (Though it may not be the right way; it's possible
+	this is really a bug in the script, and the original SI just found
+	the eggs in a different order than Exult.)
+
 2001-07-31 Ryan Nunn <triforce@merlin.net.au>
 	* exultmenu.cc, bggame.cc, sigame.cc : Namespace, need I say more?
 	* fnames.h, shapes/*.*: Allow patch reading for vga files. Made
